added search and fixed other endpoints
